objects/Organic_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>ASW_OPO__c</fullName>
        <label>ASW/OPO keywords mismatched?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Acceptance_Exception__c</fullName>
        <formula>IF( Account_Name__r.Account_Acceptance_Exception__c  = True, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Acceptance Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Organic_Analyses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Product_Type__c</fullName>
        <formula>Account_Name__r.Product_Type_Transactional__c</formula>
        <label>Account Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Segment__c</fullName>
        <formula>Account_Name__r.Secondary_Segments__c</formula>
        <label>Account Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Needed_Status__c</fullName>
        <description>Select whether the action needed is new or closed.</description>
        <label>Action Needed Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actions_Taken_Bing_Listing__c</fullName>
        <label>Actions Taken - Bing Listing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corrected Build Issue	Corrected</fullName>
                </value>
                <value>
                    <fullName>Corrected Information on Bing</fullName>
                </value>
                <value>
                    <fullName>Corrected NAP Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Primary Category or Categories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actions_Taken_GMB_Listing__c</fullName>
        <label>Actions Taken - GMB Listing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Added Cover Image Photo</fullName>
                </value>
                <value>
                    <fullName>Added Logo</fullName>
                </value>
                <value>
                    <fullName>Added Profile Pic</fullName>
                </value>
                <value>
                    <fullName>Communications Manager Invite Sent.</fullName>
                </value>
                <value>
                    <fullName>Contacted Google Support</fullName>
                </value>
                <value>
                    <fullName>Corrected Build Issue</fullName>
                </value>
                <value>
                    <fullName>Corrected NAP Issue</fullName>
                </value>
                <value>
                    <fullName>Created Pin Action Needed Case</fullName>
                </value>
                <value>
                    <fullName>Displayed Address.</fullName>
                </value>
                <value>
                    <fullName>Google PIN Marker</fullName>
                </value>
                <value>
                    <fullName>Hid Address</fullName>
                </value>
                <value>
                    <fullName>Listing Cleaned Out &amp; Torn Down</fullName>
                </value>
                <value>
                    <fullName>Manager Invite Sent.</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ownership Invite Sent</fullName>
                </value>
                <value>
                    <fullName>Updated Categories</fullName>
                </value>
                <value>
                    <fullName>Updated Google Intro Section</fullName>
                </value>
                <value>
                    <fullName>Updated Listing with Yodle Domain</fullName>
                </value>
                <value>
                    <fullName>Updated Listing w Yodle Tracking #</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actions_Taken_OnPage_Adversite_Notes__c</fullName>
        <label>Actions Taken - OnPage/Adversite Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actions_Taken_OnPage_Adversite__c</fullName>
        <label>Actions Taken - OnPage/Adversite</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Added Content from Repository</fullName>
                </value>
                <value>
                    <fullName>Added Internal Links</fullName>
                </value>
                <value>
                    <fullName>Added “No Follow” HTML code.</fullName>
                </value>
                <value>
                    <fullName>Fixed Broken Links</fullName>
                </value>
                <value>
                    <fullName>Improved Htags</fullName>
                </value>
                <value>
                    <fullName>Improved Meta Description</fullName>
                </value>
                <value>
                    <fullName>Improved Title Tags</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Recommend About Us Page.</fullName>
                </value>
                <value>
                    <fullName>Recommend addt’l Service Pages.</fullName>
                </value>
                <value>
                    <fullName>Recommend Photos.</fullName>
                </value>
                <value>
                    <fullName>Recommend Promo/Offer.</fullName>
                </value>
                <value>
                    <fullName>Recommend Removing Service Pages.</fullName>
                </value>
                <value>
                    <fullName>Submitted to G&amp;B Webmaster Tools</fullName>
                </value>
                <value>
                    <fullName>Updated Htags.</fullName>
                </value>
                <value>
                    <fullName>Updated Meta Description.</fullName>
                </value>
                <value>
                    <fullName>Updated Title Tags.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actions_Taken_Yext_Citation_Network__c</fullName>
        <label>Actions Taken - Yext/Citation Network</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Citation Network Turned Off</fullName>
                </value>
                <value>
                    <fullName>Contacted Yext Support</fullName>
                </value>
                <value>
                    <fullName>Corrected Category Term Issues</fullName>
                </value>
                <value>
                    <fullName>Corrected NAP Issues</fullName>
                </value>
                <value>
                    <fullName>Corrected SYNC Issue</fullName>
                </value>
                <value>
                    <fullName>Created Bugs Ticket - JIRA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Suppressed Duplicate Citations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdStation_Status__c</fullName>
        <formula>Text(Account_Name__r.Status__c)</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <description>Services list for OR 1.0 accounts only</description>
        <label>Additional Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Hidden_in_BLocal__c</fullName>
        <label>B - Do Not Display Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Hidden_in_GLocal__c</fullName>
        <label>G - Address Hidden</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Inputted_Into__c</fullName>
        <label>Domain Inputted into Weblocal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Inputted_into_Hotfrog__c</fullName>
        <label>Domain Inputted into Hotfrog</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Inputted_into_IBegin__c</fullName>
        <label>Domain Inputted into IBegin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Inputted_into_Ourbis__c</fullName>
        <label>Domain Inputted into Ourbis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Inputted_into_Yellowpages__c</fullName>
        <label>Domain Inputted into Yellowpages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Are_their_client_side_issues__c</fullName>
        <label>Are there client side issues?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Areas_Served_Method__c</fullName>
        <label>Areas Served Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zipcodes</fullName>
                </value>
                <value>
                    <fullName>Cities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Areas_Served__c</fullName>
        <label>Areas Served</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_SDB_Member__c</fullName>
        <label>Assigned SDB Member</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A Akhil</fullName>
                </value>
                <value>
                    <fullName>Abhijit Dhar</fullName>
                </value>
                <value>
                    <fullName>Ambica Kiran</fullName>
                </value>
                <value>
                    <fullName>A Omkar</fullName>
                </value>
                <value>
                    <fullName>A Sanjeev</fullName>
                </value>
                <value>
                    <fullName>A Shiva Kumar</fullName>
                </value>
                <value>
                    <fullName>A Umakanth</fullName>
                </value>
                <value>
                    <fullName>Baji Tulluru</fullName>
                </value>
                <value>
                    <fullName>B Govardhan</fullName>
                </value>
                <value>
                    <fullName>B Ravi Teja</fullName>
                </value>
                <value>
                    <fullName>B Siva Krinshna</fullName>
                </value>
                <value>
                    <fullName>B Venu Gopal</fullName>
                </value>
                <value>
                    <fullName>Chiranjeevi Racha</fullName>
                </value>
                <value>
                    <fullName>CH Pavan Reddy</fullName>
                </value>
                <value>
                    <fullName>D Mehar Kumar</fullName>
                </value>
                <value>
                    <fullName>Durga Prsad</fullName>
                </value>
                <value>
                    <fullName>G. Ganapathi</fullName>
                </value>
                <value>
                    <fullName>Ganesh Kumar</fullName>
                </value>
                <value>
                    <fullName>G Sunil Kumar</fullName>
                </value>
                <value>
                    <fullName>J. Sai Krishna</fullName>
                </value>
                <value>
                    <fullName>K. Hanimi Reddy</fullName>
                </value>
                <value>
                    <fullName>K Aditya</fullName>
                </value>
                <value>
                    <fullName>Kiran Kumar</fullName>
                </value>
                <value>
                    <fullName>K Lakshman</fullName>
                </value>
                <value>
                    <fullName>KNRaju</fullName>
                </value>
                <value>
                    <fullName>K Srinivas</fullName>
                </value>
                <value>
                    <fullName>K Sudhakar</fullName>
                </value>
                <value>
                    <fullName>K Vijaykanth</fullName>
                </value>
                <value>
                    <fullName>KVV Satyanarayana</fullName>
                </value>
                <value>
                    <fullName>M. Papayya Raju</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attempts_to_Contact__c</fullName>
        <label>Attempts to Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Attempt</fullName>
                </value>
                <value>
                    <fullName>Second Attempt</fullName>
                </value>
                <value>
                    <fullName>Third Attempt</fullName>
                </value>
                <value>
                    <fullName>Unreachable</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Pass__c</fullName>
        <label>Audit Pass</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPin_Received__c</fullName>
        <label>BPin # Received</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWMT_verification_file_saved_to_root__c</fullName>
        <label>BWMT verification file saved to root?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_Address_for_Postcard__c</fullName>
        <label>B - Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Biz_Desc_contain_200_char__c</fullName>
        <description>Bing-does the business description contain 200 characters?</description>
        <inlineHelpText>Bing-does the business description contain 200 characters?</inlineHelpText>
        <label>B-Business Description only 200 chars?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_Biz_Desc_error_free__c</fullName>
        <description>Bing-Is the Business Description free of grammar and spelling errors?</description>
        <inlineHelpText>Bing-Is the Business Description free of grammar and spelling errors?</inlineHelpText>
        <label>B-Business Description Error Free?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_Correct_Biz_Name_used__c</fullName>
        <description>Bing-Is the correct Business Name used?</description>
        <inlineHelpText>Bing-Is the correct Business Name used?</inlineHelpText>
        <label>B-Is Correct Business Name Used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_Does_the_listing_contain_images__c</fullName>
        <description>Bing-Does the listing contain images?</description>
        <inlineHelpText>Bing-Does the listing contain images?</inlineHelpText>
        <label>B-Does the listing contain images</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_Is_the_listing_created__c</fullName>
        <description>Bing-Is the listing created?</description>
        <inlineHelpText>Bing-Is the listing created?</inlineHelpText>
        <label>B-Is the listing created</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_PIN_Received_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>B PIN Received By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Organic_Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B_Pin_Receipt__c</fullName>
        <label>B Pin Receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>B_Pin_Resend_Attempts__c</fullName>
        <label>Bing Resend Attempts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Third</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_Postcard_Request__c</fullName>
        <label>Bing PIN Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bing_Account_Status__c</fullName>
        <label>Bing Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Verification</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Owner-Verified/Un-Claimable</fullName>
                </value>
                <value>
                    <fullName>Client Refuses Claim</fullName>
                </value>
                <value>
                    <fullName>Phone Claim Ready (IT Pro Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bing_Areas_Listed__c</fullName>
        <label>Bing Areas Serviced</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Listed</fullName>
                </value>
                <value>
                    <fullName>Errors Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bing_Category_Placement__c</fullName>
        <label>Bing Category Placement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Correct Services Selected</fullName>
                </value>
                <value>
                    <fullName>Errors Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bing_Correct_Address_Used__c</fullName>
        <label>Bing Correct Address Used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bing_Correct_Domain_Used__c</fullName>
        <label>Bing Correct Domain Used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bing_Correct_Phone_Number__c</fullName>
        <label>Bing Correct Phone Number?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Unpaid Number</fullName>
                </value>
                <value>
                    <fullName>No - Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bing_Listing_Created__c</fullName>
        <label>Bing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Client Created/No Tracking #</fullName>
                </value>
                <value>
                    <fullName>New Listing Created</fullName>
                </value>
                <value>
                    <fullName>New Listing Created and Claimed</fullName>
                </value>
                <value>
                    <fullName>Existing Listings Found</fullName>
                </value>
                <value>
                    <fullName>Owner Verified Existing Listing Edited</fullName>
                </value>
                <value>
                    <fullName>Un-Claimable Listing</fullName>
                </value>
                <value>
                    <fullName>Un-Verified Existing Listing Edited</fullName>
                </value>
                <value>
                    <fullName>Yodle Created/No Tracking #</fullName>
                </value>
                <value>
                    <fullName>Yodle Created/Tracking #</fullName>
                </value>
                <value>
                    <fullName>Address Hidden/Un-Claimable</fullName>
                </value>
                <value>
                    <fullName>Listing Resides in Bulk Account</fullName>
                </value>
                <value>
                    <fullName>Bing Rebuild Needed</fullName>
                </value>
                <value>
                    <fullName>Existing Listing Created</fullName>
                </value>
                <value>
                    <fullName>Existing Listing Claimed</fullName>
                </value>
                <value>
                    <fullName>Incorrect Address/Un-Claimable</fullName>
                </value>
                <value>
                    <fullName>Pending Bing White List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bing_Listing_Status__c</fullName>
        <label>Bing Listing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Verification</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Phone Claim Ready (IT Pro Only)</fullName>
                </value>
                <value>
                    <fullName>Client Refuses Claim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bing_Maps_URL__c</fullName>
        <label>Bing Listing URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bing_New_Listing_Build_Date__c</fullName>
        <label>Bing New Listing Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bing_Pin_Status__c</fullName>
        <formula>if(
 not (ispickval ( Account_Name__r.YO_Status__c , "Live")),
"Other",
if(
  Account_Name__r.Days_Since_Organic_Live_Date__c &lt;15,
"Pin Needed",
if(
and(
 RecordType.DeveloperName = 'Canda_Maps_Claiming',
 datevalue(CreatedDate) &lt; datevalue('2013-12-16')),
"Other",
if(
and(
 RecordType.DeveloperName = 'Maps_Initial_Claiming',
 datevalue(CreatedDate) &lt;= datevalue('2012-11-25')),
"Other",
if(
ispickval(  Bing_Listing_Created__c  , "Bing Rebuild Needed"),
"In Rebuild",
if(
not(isnull( B_Pin_Receipt__c )),
"Pin Collected",
if(
ispickval(  Bing_Listing_Status__c  , "In Verification"),
"Pin Needed",
if(
ispickval( Bing_Listing_Status__c , "Client Refuses Claim"),
"Client Refuses Claim",
"Other"))))))))</formula>
        <label>Bing Pin Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bing_Pin__c</fullName>
        <inlineHelpText>Insert the Bing Pin here when you have received it.</inlineHelpText>
        <label>Bing Pin</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bing_Places__c</fullName>
        <label>Bing Places</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bing White List Upload Error</fullName>
                </value>
                <value>
                    <fullName>Build Issue</fullName>
                </value>
                <value>
                    <fullName>Client Refuses Claim</fullName>
                </value>
                <value>
                    <fullName>Incorrect Information on Bing Listing</fullName>
                </value>
                <value>
                    <fullName>NAP Issue</fullName>
                </value>
                <value>
                    <fullName>No Major Setup Issues Found</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Primary Category or Categories Incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bing_Project_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SEO Marketing Ops will be analyzing the current Bing build process and its value. Test will confirm if it is valuable to depend on Yext to push our info out and reduce Bing pin claim necessity.</description>
        <inlineHelpText>Is this account part of the Bing/Yext project?</inlineHelpText>
        <label>Bing Project Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bing_Support_Notes__c</fullName>
        <label>Actions Taken – Bing Listing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bing_White_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bing White List Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_Opt_Request__c</fullName>
        <label>Block Opt Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Built_Citations_Where__c</fullName>
        <inlineHelpText>If you built more citations where did you build? Please provide the URL of the sites.</inlineHelpText>
        <label>Built Citations Where?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Built_Links_Where__c</fullName>
        <inlineHelpText>If you built more links where did you build? Please provide the URL of the sites.</inlineHelpText>
        <label>Built Links Where?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bulk_Account_Proxy_IP_Used__c</fullName>
        <formula>Account_Name__r.Bulk_Account_Proxy_IP_Used_Parent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk Account Proxy IP Used</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Bing_Account__c</fullName>
        <formula>TEXT(Account_Name__r.Bulk_Bing_AccountPL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk Bing Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Google_Account_2__c</fullName>
        <formula>TEXT(Account_Name__r.Bulk_Google_AccountPL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk Google Account</label>
        <type>Text</type>
    </fields>
</CustomObject>